# cosmic-applet-ram-usage

./: Cargo.toml  README.md
data/: be.samvervaeck.CosmicAppletRAM.desktop
src/: main.rs
