[package]
name = "cosmic-applet-ram"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["serde_derive"] }
sysinfo = "0.35.1"
tokio = { version = "1.45.1", features = ["io-std", "macros", "sync"] }
tracing = "0.1.41"


[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet", "tokio", "wayland"]
